--- a/package.json
+++ b/package.json
@@ -16,6 +16,15 @@
     "engines": {
         "node": ">=10.0.0"
     },
+    "jshintConfig": {
+    "undef": true,
+    "unused": true,
+    "esversion": 6,
+    "globals": {
+            "MY_GLOBAL": true,
+            "$": true
+        }
+    },
     "dependencies": {},
     "devDependencies": {}
 }
